# UBB

./: .gitignore  README.md
OOP/Lab2-4/: .gitignore  CMakeLists.txt  build  build-tests  coverage.CMakeCCompilerId.c.b60fd865ef0cae0c9872c3239d5201fc.html  coverage.cheltuiala.c.98f7aafcb6638fd4239f7b0c771e6c01.html  coverage.functions.html  coverage.html  coverage.repo_cheltuieli.c.89f09630f85a250f5d3fc43010b56848.html  coverage.service_cheltuieli.c.51da8db59d733de307c3c83a7a286e56.html  coverage.serviciu_cheltuieli.c.f7804eca3b65c85291286743fe759c3f.html  coverage.test.c.f1c2d2b82fa7a16d6a5517a191fa29cc.html  coverage.test_main.c.31575bd352af52c0db98e292a518f632.html  coverage.validator_domain.c.c52e6510e21e7bac49f0109bf567b811.html  coverage.validator_repo.c.5a63590703e173998fdea64df802788b.html  coverage.validator_service.c.f9f9acc8b8e367d47afc75866da72522.html  coverage.vector_dinamic.c.93b4077bbf57eebb83c07383ae24f0c6.html  readme.md  run  run-with-data
OOP/Lab2-4/compilare/: CMakeCache.txt  Makefile  aplicatie_buget_familie  cmake_install.cmake  teste_buget_familie
OOP/Lab2-4/compilare-coverage/: CMakeCache.txt  Makefile  cmake_install.cmake  teste_buget_familie
OOP/Lab2-4/include/domain/: cheltuiala.h
OOP/Lab2-4/include/repository/: repo_cheltuieli.h
OOP/Lab2-4/include/service/: service_cheltuieli.h
OOP/Lab2-4/include/ui/: interfata_consola.h
OOP/Lab2-4/include/utils/: vector_dinamic.h
OOP/Lab2-4/include/validation/: validator_domain.h  validator_repo.h  validator_service.h
OOP/Lab2-4/src/: main.c
OOP/Lab2-4/tests/: test.c  test_main.c
(+291 files in other folders)
